tests/rosetta/out/Pascal/b-zier-curves-intersections.error
parse: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/b-zier-curves-intersections.mochi:1:1: lexer: invalid input text "# Mochi implemen..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/b-zier-curves-intersections.mochi:1:1

  1 | # Mochi implementation of Rosetta "B'zier curves/Intersections" task
    | ^

help:
  String literals must be properly closed with a `"`.